欄位定義跟圖片

--- a/src/main/webapp/listAll.html
+++ b/src/main/webapp/listAll.html
@@ -1782,7 +1782,7 @@ font-size: 62.5%;
         // 發送AJAX請求以獲取所有文章
         $.ajax({
             type: "POST",
-            url: "post/post.do",
+            url: "/post/post.do",
             dataType: "json", // 期望JSON響應
             success: function (data) {
                 // 處理成功的響應
