--- a/src/main/webapp/generaluser/guser.html
+++ b/src/main/webapp/generaluser/guser.html
@@ -70,6 +70,14 @@
     <!----------------------------------------------- main 區 ------------------------------------------------------->
     <main class="main">
             <h2 class="h6 pt-4 pb-3 mb-4 border-bottom">會員資料</h2>
+            <li>
+		    <form method="post" action="generaluser.do" >
+		        <b>輸入會員編號 (如11000001):</b>
+		        <input type="text" name="gUserID">
+		        <input type="hidden" name="action" value="getOne_For_Display">
+		        <input type="submit" value="送出">
+		    </form>
+		  </li>
         <!-- <form action="/action_page.php"> -->
             <form class="bararea" enctype="multipart/form-data">
                 <span class="gName">姓名: <input type="text" id="gName" name="gName" required="required"></span>
